# wiki-edits

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  QUICKSTART_RULES.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py  template_metadata.json
.github/workflows/: ci.yml  lint.yml
dev/: debug_pipeline.py  setup_local_env.py  test_ai_detection.py  test_pipeline.py
examples/: README.md  basic_usage.py  custom_detection.py  query_results.sql
pipeline/: __init__.py  local_testing.py  processing.py  streaming.py
scripts/: ai_events_stats.py  build_and_deploy_template.sh  generate_requirements.py  run_template.sh  runtimedpipeline.sh  scan_existing_data.py  update_emojis.py  update_rules.py
scripts/setup/: setup_pubsub.py  setup_tables.py
src/wiki_pipeline/: __init__.py  ai_detection.py  detection_patterns.json  schema.py  schema_migration.py  utils.py  version.py
src/wiki_pipeline/analysis/patterns/: detection_patterns.json  pattern_loader.py
src/wiki_pipeline/analysis/rule_versions/: v1.0.0.py
src/wiki_pipeline/assets/: emoji.json
src/wiki_pipeline/rule_versions/: v1.0.1.py
src/wiki_pipeline/transforms/: extractors.py  filters.py  validation.py
tests/: __init__.py  conftest.py  manual_ai_publisher.py  manual_pipeline_runner.py  manual_pubsub_test.py  manual_stream_test.py  test_ai_detection.py  test_business_advanced.py  test_business_critical.py  test_connectivity.py  test_detection_rules.py  test_main.py  test_pipeline.py  test_pipeline_extended.py  test_schema.py  test_schema_evolution.py  test_security.py  test_security_advanced.py  test_transforms.py  test_transforms_extended.py  test_utils.py  test_utils_extended.py  test_version.py
tests/unit/: test_extractors.py
